ola-parser/src/testdata/syntaxTests/parsing/address_public_payable_error.sol
contract C {
    address payable a;
}
// ----
// ParserError 2314: (32-39): Expected identifier but got 'payable'
